# cs2-dumper

./: Cargo.toml
src/analysis/: mod.rs  offsets.rs  patterns.rs
src/gui/: app.rs  mod.rs  process_selector.rs
src/output/: mod.rs  signatures.rs
