[package]
name = "cs2-dumper"
version = "0.1.3"
authors = ["a2x"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/a2x/cs2-dumper"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
heck = "0.5"
log = "0.4"
memflow = "0.2"
pelite = "0.10"
phf = { version = "0.13", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GUI dependencies
eframe = "0.30"
egui = "0.30"
egui_extras = "0.30"
rfd = "0.15"
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
memflow-native = { git = "https://github.com/memflow/memflow-native" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
